openshift/route.yaml
#http endpoint route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-sample
  labels:
    app: nodejs-sample
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nodejs-sample
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
